Ajout changement de langue fonctionnel (Français/Anglais)

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -1,6 +1,8 @@
-login.message.text=Enter your nickname:
+login1.message.text=Player 1 :
+login2.message.text=Player 2 :
 launch.button.text=Launch Game
 error.nickname=Error: nickname required
+language.button.text = Language
 
 squarename.state=Empty
 squarename.BDE=Stuck in BDE
