--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -22,6 +22,7 @@ squarename.toeic=TOEIC Fail
 squarename.uni=Licence class
 squarename.kangaroo=Kangaroo Square
 
+dice.result.text= Dice : 
 dice.button.text = Throw
 victory.text = Victory ! 
 restart.button.text = Restart
