--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -29,3 +29,4 @@ restart.button.text = Restart
 player1.text = Player 1 : 
 player2.text = Player 2 : 
 whosturn.text = Turn of 
+skill.level.text= Skill level : 
