--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -24,7 +24,7 @@ squarename.kangaroo=Kangaroo Square
 
 dice.result.text= Dice : 
 dice.button.text = Throw
-victory.text = Victory ! 
+victory.text = Victory ! Your wage is : 
 restart.button.text = Restart
 player1.text = Player 1 : 
 player2.text = Player 2 : 
