Added combobox for board configuration

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -3,6 +3,7 @@ login2.message.text=Player 2 :
 launch.button.text=Launch Game
 error.nickname=Error: nickname required
 language.button.text = Language
+board.button.text = Board
 
 squarename.state=Empty
 squarename.BDE=Stuck in BDE
