Added combobox for hardskills and diceTotal for each round

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle_en_US.properties
@@ -4,6 +4,7 @@ launch.button.text=Launch Game
 error.nickname=Error: nickname required
 language.button.text = Language
 board.button.text = Board
+hardskill.button.text = Hard Skill
 
 squarename.state=Empty
 squarename.BDE=Stuck in BDE
